SigmaCodebackup3rdSep/objects/BP_Payment_Details__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_Payment__c</fullName>
        <label>BP_Payment</label>
        <referenceTo>BP_Payment__c</referenceTo>
        <relationshipLabel>BP_Payment_Details</relationshipLabel>
        <relationshipName>BP_Payment_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Balance_Amount__c</fullName>
        <formula>(Final_payable_amount_to_BP__c) - (Amount_Paid__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_payable_amount_to_BP__c</fullName>
        <label>Final payable amount to BP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Amount__c</fullName>
        <label>Total Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>BP_Payment_Detail</label>
    <nameField>
        <displayFormat>PDN-{0000}</displayFormat>
        <label>Payment_Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BP_Payment_Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>